<resources>
    <string name="app_name">app_listas</string>
    <string name="edit">edit</string>
    <string name="confirm">confirm</string>
    <string name="cancel">cancel</string>
    <string name="delete">delete</string>
    <string name="add">add</string>
    <string name="set_title">set name</string>
    <string name="set_description">set description</string>
    <string name="done">done</string>
    <string name="navigation_drawer_close">close</string>
    <string name="navigation_drawer_open">open</string>
    <string name="next">next</string>
</resources>